bisai/envoyfilter3.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: cluster
  namespace: istio-system
spec:
  configPatches:
  - applyTo: CLUSTER
    patch:
      operation: MERGE
      value: 
          connectTimeout: 0.030s
          upstreamConnectionOptions:
            tcpKeepalive:
              keepaliveInterval: 75
              keepaliveProbes: 10
              keepaliveTime: 7200
          typed_extension_protocol_options:
            envoy.extensions.upstreams.http.v3.HttpProtocolOptions:
              "@type": "type.googleapis.com/envoy.extensions.upstreams.http.v3.HttpProtocolOptions"
              common_http_protocol_options:
                max_requests_per_connection: 1024
              explicit_http_config:
                http_protocol_options: {}
