bisai/envoyfilter4.yaml
apiVersion: networking.istio.io/v1alpha3
kind: EnvoyFilter
metadata:
  name: envoyfilter5
  namespace: istio-system
spec:
  configPatches:
  - applyTo: NETWORK_FILTER
    match:
      listener:
        filterChain:
          filter:
            name: "envoy.filters.network.http_connection_manager"
    patch:
      operation: MERGE
      value:
              name: envoy.filters.network.http_connection_manager
              typedConfig:
                '@type': type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                common_http_protocol_options:
                  idle_timeout: 100s
                  max_connection_duration: 7200s
                  max_headers_count: 1000
                  max_stream_duration: 72000s
                  headers_with_underscores_action: ALLOW 
                http2_protocol_options:
                  hpack_table_size: 4096
                  max_concurrent_streams: 1000
                  initial_stream_window_size: 268435456 
                  initial_connection_window_size: 268435456
                  allow_connect: true
                  max_outbound_frames: 10000
                  max_outbound_control_frames: 1000
                  max_consecutive_inbound_frames_with_empty_payload: 100
                  max_inbound_priority_frames_per_stream: 100
                  max_inbound_window_update_frames_per_data_frame_sent: 100
                  connection_keepalive:
                    interval: 75s
                    timeout: 7200s
                    interval_jitter:
                      value: 10
                    connection_idle_interval: 75s
